<resources>
    <string name="app_name">RaboBankAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download">Download</string>
    <string name="permissions_denied_to_read_write_external_storage">Permissions denied to read/write external storage</string>
    <string name="url_can_not_be_empty">Url can not be empty</string>
</resources>